added markup header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header-page">
-  <div class="header-page-container">
+  <div class="header-page-container container">
     <nav class="page-nav">
       <a class="logo-type" href="./index.html">
         <img
@@ -9,32 +9,32 @@
           width="266"
         />
       </a>
-      <ul class="menu">
+      <ul class="menu list">
         <li class="menu-item">
-          <a class="menu-link" href="">Чому ми?</a>
+          <a class="menu-link link" href="">Чому ми?</a>
         </li>
 
         <li class="menu-item">
-          <a class="menu-link" href="">Партнери</a>
+          <a class="menu-link link" href="">Партнери</a>
         </li>
 
         <li class="menu-item">
-          <a class="menu-link" href=".">Благодійність</a>
+          <a class="menu-link link" href=".">Благодійність</a>
         </li>
 
         <li class="menu-item">
-          <a class="menu-link" href="">Про нас</a>
+          <a class="menu-link link" href="">Про нас</a>
         </li>
 
         <li class="menu-item">
-          <a class="menu-link" href="">Drupal</a>
+          <a class="menu-link link" href="">Drupal</a>
         </li>
       </ul>
     </nav>
 
-    <ul class="social-media-nav">
+    <ul class="social-media-nav list">
       <li class="social-media-item">
-        <a class="social-media-link" href="https://www.facebook.com/">
+        <a class="social-media-link link" href="https://www.facebook.com/">
           <svg class="social-media-icon" width="35" height="35">
             <use href="./images/sprite.svg#icon-facebook"></use>
           </svg>
@@ -42,7 +42,7 @@
       </li>
 
       <li class="social-media-item">
-        <a class="social-media-link" href="https://www.instagram.com/">
+        <a class="social-media-link link" href="https://www.instagram.com/">
           <svg class="social-media-icon" width="35" height="35">
             <use href="./images/sprite.svg#icon-instagram"></use>
           </svg>
@@ -50,7 +50,7 @@
       </li>
 
       <li class="social-media-item">
-        <a class="social-media-link" href="">
+        <a class="social-media-link link" href="">
           <svg class="social-media-icon" width="35" height="35">
             <use href="./images/sprite.svg#icon-viber"></use>
           </svg>
@@ -59,7 +59,7 @@
     </ul>
 
     <address class="contacts">
-      <p class="contacts-work schedule">Пн-Пт з 10 до 18</p>
+      <p class="contacts-work-schedule">Пн-Пт з 10 до 18</p>
       <a class="contacts-tel-link" href="tel:0800759759">0 (800) 759-759</a>
     </address>
   </div>
