--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
       <a class="logo-type" href="./index.html">
         <img
           class="logo-type-img"
-          src="./images/logo-type.jpg"
+          src="./images/logo.png"
           alt="Логотип веб-студії"
           width="266"
         />
@@ -60,7 +60,15 @@
 
     <address class="contacts">
       <p class="contacts-work-schedule">Пн-Пт з 10 до 18</p>
-      <a class="contacts-tel-link" href="tel:0800759759">0 (800) 759-759</a>
+      <a class="contacts-tel-link link" href="tel:0800759759"
+        >0 (800) 759-759</a
+      >
+
+      <button type="button" class="scroll-down-btn">
+        <svg class="scroll-down-btn-icon" width="12" height="8">
+          <use href="./images/sprite.svg#icon-scroll-down"></use>
+        </svg>
+      </button>
     </address>
   </div>
 </header>
