--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,11 @@
-.header-page-container {
+.header-page {
   display: flex;
   justify-content: center;
+}
+
+.header-page-container {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 0 16px 0 16px;
 }
@@ -25,7 +30,6 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 25px;
-  letter-spacing: 1.25;
   color: var(--primary-text-color-theme-light);
 }
 
@@ -38,8 +42,7 @@
 .contacts {
   font-family: var(--main-font-family);
   font-style: normal;
-  display: flex;
-  justify-content: center;
+  margin-left: 40px;
 }
 
 .contacts-work-schedule {
@@ -47,13 +50,25 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  letter-spacing: 1.25;
+  color: var(--primary-text-color-theme-light);
 }
 
 .contacts-tel-link {
   font-weight: 700;
   font-size: 26px;
   line-height: 32.5px;
-  letter-spacing: 1.25;
   color: var(--primary-text-color-theme-light);
+}
+
+.scroll-down-btn {
+  width: 24px;
+  height: 24px;
+  border: none;
+  background: #fff;
+  padding: 0;
+  margin-left: 8px;
+}
+
+.scroll-down-btn-icon {
+  fill: var(--primary-text-color-theme-light);
 }
