--- a/src/partials/choose-us.html
+++ b/src/partials/choose-us.html
@@ -1,6 +1,60 @@
 <section class="why-us-page">
-  <div class="why-us-page-container container">
-    <h1 class="why-us-title">Перевірка тествого завдання</h1>
-    
+  <div class="container">
+    <div class="why-us-page-container">
+      <h1 class="why-us-title" id="why-us">Перевірка текстового завдання</h1>
+      <div class="why-us-content horizontal-line">
+        <picture>
+          <source
+            srcset="
+              ./images/why-us.img/people-work.webp     1x,
+              ./images/why-us.img/people-work.@2x.webp 2x
+            "
+            type="image/webp"
+          />
+
+          <source
+            srcset="
+              ./images/why-us.img/people-work.jpg    1x,
+              ./images/why-us.img/people-work@2x.jpg 2x
+            "
+            type="image/jpeg"
+          />
+          <img
+            src="./images/why-us.img/people-work.jpg"
+            alt="Люди працюють за комп'ютерами"
+            width="900"
+            height="464"
+          />
+        </picture>
+        <div class="why-us-text">
+          <p>
+            Ми цінуємо ваш час та зусилля, тому намагаємося забезпечити
+            оперативну відповідь на ваші тестові роботи. Наша команда керівників
+            та співробітників займається перевіркою усіх робіт ВРУЧНУ перевіряє
+            всі роботи, гарантуючи високу якість оцінки.
+          </p>
+          <p>
+            <b
+              >На першому етапі вашу роботу перевірить керівник HR-відділу —
+              Олена, або Анатолій Валерійович — керівник вебстудії Глянець.
+            </b>
+          </p>
+          <p>
+            Перевірку другого етапу, в залежності від посади на яку ви
+            претендуєте, буде здійснювати керівник відповідного відділу
+            (наприклад,
+            <b>керівник відділу верстки</b> у разі подання заявки на посаду
+            верстальника).
+          </p>
+          <p>
+            Ми розуміємо, як важливо для вас отримати швидку відповідь, тому
+            перевіряємо ваші <b>тестові завдання</b> навіть після завершення
+            робочого дня. Наша команда цінує кожного потенційного кандидата і
+            робить усе можливе, щоб забезпечити ретельну оцінку ваших здібностей
+            та швидко повідомити результат.
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
