--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,31 +1,33 @@
 <section class="hero-section">
-  <div class="hero-container container">
-    <div class="wrapper list">
-      <p class="secondary-text">Вебстудія №1 з розробки сайтів</p>
-      <h1 class="hero-title">Приєднуйтесь до нашої IT-команди</h1>
-      <p class="secondary-text">
-        Відкрийте нові перспективи кар'єрного зростання, приєднавшись до нашої
-        інноваційної IT-команди, яка відкриває двері до безмежних можливостей
-      </p>
-      <div class="hero-btn-container">
-        <button type="button" class="hero-btn">Спробуй свої сили</button>
+  <div class="container">
+    <div class="hero-container">
+      <div class="wrapper list">
+        <p class="secondary-text">Вебстудія №1 з розробки сайтів</p>
+        <h1 class="hero-title">Приєднуйтесь до нашої IT-команди</h1>
+        <p class="secondary-text">
+          Відкрийте нові перспективи кар'єрного зростання, приєднавшись до нашої
+          інноваційної IT-команди, яка відкриває двері до безмежних можливостей
+        </p>
+        <div class="hero-btn-container">
+          <button type="button" class="hero-btn">Спробуй свої сили</button>
+        </div>
+      </div>
+
+      <div class="hero-img">
+        <div class="hero-img-container">
+          <svg class="basic-img" width="667" height="654">
+            <use href="./images/sprite.svg#icon-hero-img"></use>
+          </svg>
+        </div>
       </div>
     </div>
 
-    <div class="hero-img">
-      <div class="hero-img-container">
-        <svg class="basic-img" width="667" height="654">
-          <use href="./images/sprite.svg#icon-hero-img"></use>
-        </svg>
-      </div>
-    </div>
-
-    <div class="hero-arroe-scroll-down-wrapper">
-      <a href="" class="hero-arrow-scroll-down-item link">
+    <div class="hero-arrow-scroll-down-wrapper">
+      <a href="#why-us" class="hero-arrow-scroll-down-item link">
         <span class="arrow-scroll-down-title">Дізнатися більше</span>
         <button type="button" class="arrow-scroll-down-btn">
           <svg class="arrow-scroll-down-icon" width="18" height="28">
-            <use href="./images/sprite.svg#icon-arrow-scroll"></use>
+            <use href="./images/sprite.svg#icon-arrow-down"></use>
           </svg>
         </button>
       </a>
