--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./choose-us.css');
 
 :root {
   --main-font-family: 'Montserrat', sans-serif;
@@ -18,6 +19,8 @@
 
 body {
   background: #fffefc;
+  font-family: var(--main-font-family);
+  color: var(--primary-text-color-theme-light);
 }
 
 button {
