--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,8 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./choose-us.css');
+@import url('./about-us.css');
+@import url('./our-advantages.css');
 
 :root {
   --main-font-family: 'Montserrat', sans-serif;
