--- a/src/partials/our-advantages.html
+++ b/src/partials/our-advantages.html
@@ -186,75 +186,36 @@
 
       <ul class="advantages-gallery list">
         <li class="gallery-item">
-          <picture>
-            <source
-              srcset="
-                ./images/our-advantages.img/gallery-img-1.jpg    1x,
-                ./images/our-advantages.img/gallery-img-1.2x.jpg 2x
-              "
-              type="image/jpg"
-            />
-            <img
-              src="./images/our-advantages.img/gallery-img-1.jpg"
-              alt="Люди гарють у відеоігри"
-              width="432"
-              height="288"
-            />
-          </picture>
+          <img
+            src="./images/our-advantages.img/gallery-img-1.jpg"
+            alt="Люди працюють за комп'ютерами"
+            width="432"
+            height="288"
+          />
         </li>
-
         <li class="gallery-item">
-          <picture>
-            <source
-              srcset="
-                ./images/our-advantages.img/gallery-img-2.jpg    1x,
-                ./images/our-advantages.img/gallery-img-2.2x.jpg 2x
-              "
-              type="image/jpg"
-            />
-            <img
-              src="./images/our-advantages.img/gallery-img-2.jpg"
-              alt="Людина працює за комп'ютером"
-              width="432"
-              height="288"
-            />
-          </picture>
+          <img
+            src="./images/our-advantages.img/gallery-img-2.jpg"
+            alt="Люди працюють за комп'ютерами"
+            width="432"
+            height="288"
+          />
         </li>
-
         <li class="gallery-item">
-          <picture>
-            <source
-              srcset="
-                ./images/our-advantages.img/gallery-img-3.jpg    1x,
-                ./images/our-advantages.img/gallery-img-3.2x.jpg 2x
-              "
-              type="image/jpg"
-            />
-            <img
-              src="./images/our-advantages.img/gallery-img-3.jpg"
-              alt="Годинник, неоновий банет, ixbox"
-              width="432"
-              height="288"
-            />
-          </picture>
+          <img
+            src="./images/our-advantages.img/gallery-img-3.jpg"
+            alt="Люди працюють за комп'ютерами"
+            width="432"
+            height="288"
+          />
         </li>
-
         <li class="gallery-item">
-          <picture>
-            <source
-              srcset="
-                ./images/our-advantages.img/gallery-img-4.jpg    1x,
-                ./images/our-advantages.img/gallery-img-4.2x.jpg 2x
-              "
-              type="image/jpg"
-            />
-            <img
-              src="./images/our-advantages.img/gallery-img-4.jpg"
-              alt="Люди працюють за ноутбуком, на фоні банер вебстудії Глянець"
-              width="432"
-              height="288"
-            />
-          </picture>
+          <img
+            src="./images/our-advantages.img/gallery-img-4.jpg"
+            alt="Люди працюють за комп'ютерами"
+            width="432"
+            height="288"
+          />
         </li>
       </ul>
     </div>
