--- a/src/partials/drupal.html
+++ b/src/partials/drupal.html
@@ -10,10 +10,10 @@
                 href="./images/sprite.svg#icon-ukraine-community-drupal"
               ></use>
             </svg>
-            <p class="drupal-project-text">
+            <p class="drupal-project-title">
               <b>Ми зробили сайт спільноти drupal.ua</b>
             </p>
-            <p>
+            <p class="drupal-page-text">
               Ми розуміємо, що кожна людина має унікальні потреби та обставини,
               тому пропонуємо гнучкий режим роботи, який враховує
               <b>індивідуальні вимоги</b> та дозволяє пристосуватися до них.
@@ -26,8 +26,10 @@
             <svg class="icon-drupal" width="92" height="46">
               <use href="./images/sprite.svg#icon-open-source"></use>
             </svg>
-            <p class="drupal-project-text"><b>Робимо вклад в Open Source</b></p>
-            <p>
+            <p class="drupal-project-title">
+              <b>Робимо вклад в Open Source</b>
+            </p>
+            <p class="drupal-page-text">
               Drupal – це не тільки широке міжнародне співтовариство, але й
               потужна технологія OpenSource. Наша команда
               <b>створює публікує власні модулі та теми</b> оформлення на
@@ -41,10 +43,10 @@
             <svg class="icon-drupal" width="152" height="46">
               <use href="./images/sprite.svg#icon-alternative-commerce"></use>
             </svg>
-            <p class="drupal-project-text">
+            <p class="drupal-project-title">
               <b>Дали людям безкоштовно e-commerce платформу</b>
             </p>
-            <p>
+            <p class="drupal-page-text">
               Alternative commerce - безкоштовний 100% готовий сайт-магазин на
               основі Drupal. Ви можете завантажити та
               <b>почати робити покупки на своєму хостингу!</b> Або за нашої
@@ -56,4 +58,3 @@
     </div>
   </div>
 </section>
--container
