--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@
 @import url('./our-advantages.css');
 @import url('./drupal.css');
 @import url('./our-partners.css');
+@import url('./charity.css');
 
 :root {
   --main-font-family: 'Montserrat', sans-serif;
@@ -49,6 +50,10 @@ ol {
 
 img {
   display: block;
+}
+
+button {
+  cursor: pointer;
 }
 
 .container {
