--- a/src/partials/charity.html
+++ b/src/partials/charity.html
@@ -3,14 +3,14 @@
     <div class="charity-container">
       <h3 class="charity-title">Благодійність</h3>
       <div class="charity-content">
-        <div class="charity-text">
-          <p>
+        <div class="charity-wrapper">
+          <p class="charity-wrapper-title">
             <b>
               Наша місія — зробити світ кращим, і ми віримо, що благодійність є
               одним з ключових інструментів для досягнення цієї мети.
             </b>
           </p>
-          <p>
+          <p class="charity-wrapper-text">
             Ми вважаємо, що кожен бізнес має відповідальність перед
             суспільством, у якому він працює. Тому наша компанія докладає
             максимальних зусиль для підтримки благодійних організацій, проєктів,
@@ -20,21 +20,21 @@
         </div>
         <div class="charity-gallery">
           <ul class="gallery-list list">
-            <li class="gallery-item">
+            <li class="gallery-list-item gallery-1">
               <img
                 src="./images/charity.img/charity-gallery-1.jpg"
                 alt="Селфі двох чоловіків з дроном"
                 width="375"
               />
             </li>
-            <li class="gallery-item">
+            <li class="gallery-list-item gallery-2">
               <img
                 src="./images/charity.img/charity-gallery-2.jpg"
                 alt="Чоловік передає гроші на благодійність"
                 width="413"
               />
             </li>
-            <li class="gallery-item">
+            <li class="gallery-list-item gallery-3">
               <img
                 src="./images/charity.img/charity-gallery-3.jpg"
                 alt="Комп'ютер та системні блоки"
@@ -43,6 +43,110 @@
             </li>
           </ul>
         </div>
+      </div>
+
+      <div class="wrapper-project">
+        <ul class="project-list list">
+          <li class="project-item">
+            <button class="project-btn">
+              <div class="project-content">
+                <svg class="icon-project" width="80" height="80">
+                  <use href="./images/sprite.svg#icon-emblem"></use>
+                </svg>
+                <p class="project-title"><b>Допомога ЗСУ</b></p>
+                <p class="project-text">
+                  Наші герої потребують уваги та підтримки, тому будь-яка
+                  допомога, навіть найменша, важлива. Разом — ми сила!
+                </p>
+              </div>
+            </button>
+          </li>
+
+          <li class="project-item">
+            <button class="project-btn">
+              <div class="project-content">
+                <svg class="icon-project" width="80" height="80">
+                  <use
+                    href="./images/sprite.svg#icon-point-of-invincibility"
+                  ></use>
+                </svg>
+                <p class="project-title"><b>Пункт незламності</b></p>
+                <p class="project-text">
+                  Восени 2022 року, коли країна перебувала під загрозою
+                  блекауту, ми добровільно облаштували “Пункт незламності” в
+                  нашому офісі.
+                </p>
+              </div>
+            </button>
+          </li>
+
+          <li class="project-item">
+            <button class="project-btn">
+              <div class="project-content">
+                <svg class="icon-project" width="80" height="80">
+                  <use href="./images/sprite.svg#icon-computer"></use>
+                </svg>
+                <p class="project-title"><b>Компʼютерний клас</b></p>
+                <p class="project-text">
+                  Здійснили повне оновлення комп'ютерного класу у КЗ
+                  "Зарванецька гімназія". Цей проєкт був частиною соціальної
+                  відповідальності та прагнення покращити освітні умови для
+                  молодого покоління.
+                </p>
+              </div>
+            </button>
+          </li>
+
+          <li class="project-item">
+            <button class="project-btn">
+              <div class="project-content">
+                <svg class="icon-project" width="80" height="80">
+                  <use href="./images/sprite.svg#icon-trace-pet"></use>
+                </svg>
+                <p class="project-title">
+                  <b>Стерилізація і вакцинація місцевих тварин</b>
+                </p>
+                <p class="project-text">
+                  Стерилізація допомагає контролювати розмноження безпритульних
+                  тварин та зменшити їх кількість в майбутньому.
+                </p>
+              </div>
+            </button>
+          </li>
+
+          <li class="project-item">
+            <button class="project-btn">
+              <div class="project-content">
+                <svg class="icon-project" width="80" height="80">
+                  <use href="./images/sprite.svg#icon-clean"></use>
+                </svg>
+                <p class="project-title"><b>Прибирання “Чижової посадки”</b></p>
+                <p class="project-text">
+                  Минулого року була проведена екологічна акція прибирання
+                  лісового масиву “Чижова посадка”. За участю добровольців було
+                  зібрано близько ста мішків сміття, яке вивозили трьома
+                  вантажівками.
+                </p>
+              </div>
+            </button>
+          </li>
+
+          <li class="project-item">
+            <button class="project-btn">
+              <div class="project-content">
+                <svg class="icon-project" width="80" height="80">
+                  <use href="./images/sprite.svg#icon-learning"></use>
+                </svg>
+                <p class="project-title"><b>Додаткові проєкти</b></p>
+                <p class="project-text">
+                  Одним із наступних проєктів, який вже невдовзі буде
+                  реалізовано – будиночки для безкоштовного обміну дитячою
+                  літературою. Його задум має назву "Читацький клуб".
+                </p>
+              </div>
+            </button>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
