--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,102 @@
 <footer class="footer-page">
   <div class="container">
     <div class="footer-container">
-      <div class="text-wrapper"></div>
-      <div class="contacts-wrapper"></div>
+      <div class="text-wrapper">
+        <svg class="icon-footer-logo" width="266" height="66">
+          <use href="./images/sprite.svg#icon-footer-logo"></use>
+        </svg>
+        <div class="text-wrapper-content">
+          <p>
+            Компанія працює з 2008 року під брендом Глянець. Ми використовуємо
+            для роботи лише власну нерухомість, техніку та сервери. Виконуємо
+            всі замовлення виключно своїми ресурсами, залучаємо до роботи лише
+            штатних працівників. Завдяки цьому нас цінують як надійного партнера
+            та підрядника.S
+          </p>
+          <p class="content">© 2023 Глянець™ — Розробка та підтримка сайтів</p>
+        </div>
+      </div>
+
+      <div class="wrapper-bg">
+        <div class="footer-contacts-wrapper">
+          <div class="contacts-wrapper">
+            <p class="contacts-title"><b>Зателефонуйте нам</b></p>
+            <address>
+              <ul class="contacts-list list">
+                <li class="contacts-item">
+                  <a class="contacts-tel link" href="tel:0800759759"
+                    >0 (800) <b>759-759</b> <span>доб. 103</span></a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a class="contacts-email link" href="mail:order@glyanec.net"
+                    ><b>order</b>@glyanec.net</a
+                  >
+                </li>
+              </ul>
+            </address>
+
+            <ul class="social-media-list list">
+              <li class="social-media-element">
+                <svg class="footer-social-media-icon" width="13" height="22">
+                  <use href="./images/sprite.svg#icon-footer-facebook"></use>
+                </svg>
+              </li>
+              <li class="social-media-element">
+                <svg class="footer-social-media-icon" width="22" height="22">
+                  <use href="./images/sprite.svg#icon-footer-instagram"></use>
+                </svg>
+              </li>
+              <li class="social-media-element">
+                <svg class="footer-social-media-icon" width="29" height="17">
+                  <use href="./images/sprite.svg#icon-footer-google"></use>
+                </svg>
+              </li>
+              <li class="social-media-element">
+                <svg class="footer-social-media-icon" width="22" height="18">
+                  <use href="./images/sprite.svg#icon-footer-twitter"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <p class="contacts-title"><b>Адреса нашого офісу</b></p>
+            <ul class="address-list list">
+              <li class="address-item">
+                <p class="address">
+                  21016, Україна, м. Вінниця,
+                  <b>с. Зарванці, вул. Архітектурна, 5А</b>
+                </p>
+              </li>
+              <li class="address-item">
+                <p class="gps">GPS: 49.234384, 28.394405</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="our-startups">
+            <p class="contacts-title"><b>Наші стартапи</b></p>
+            <div class="icon-startups-logo">
+              <svg class="icon-ukraine-community" width="94" height="59">
+                <use href="./images/sprite.svg#icon-ukraine-community"></use>
+              </svg>
+              <svg
+                class="icon-footer-alternative-commerce"
+                width="196"
+                height="59"
+              >
+                <use
+                  href="./images/sprite.svg#icon-footer-alternative-commerce"
+                ></use>
+              </svg>
+              <svg class="icon-footer-helpdesk-star" width="206" height="33">
+                <use href="./images/sprite.svg#icon-footer-helpdesk-star"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
